Add scheduled Qobuz sync
